# DAO-Tao

./: .replit  Pasted--172-31-196-23-07-Oct-2024-19-22-35-GET-wallet-HTTP-1-1-200-172-31-196-23-07-Oct-202-1728329099260.txt  Pasted-Description-Handle-Safe-indexing-events-from-Transaction-Service-and-deliver-as-HTTP-webhooks-This--1728333992970.txt  README.md  app.py  blockchain_service.py  dao-notifications-rules.tsx  install-dao-tao.txt  mock_safe_data.json  models.py  nlp_processor.py  package-lock.json  package.json  pyproject.toml  replit.nix  safe_event_service.py  safe_service.py  scam_detection.py  smart-contract-ui.tsx
flask/: app.py  install-dao-tao.txt  pyproject.toml
flask/static/js/: main.js
flask/templates/: index.html  transaction.html
static/css/: style.css
static/js/: main.js  wallet.js
templates/: index.html  test.html  transaction.html  wallet.html
wil-test/: oldPage.tsx  safe-ava-claude-integration-example.js  safe-ava-int.py  safe-ava-integration-example.js
