[tool.poetry]
name = "repl-nix-nlp-smartcontract-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
email-validator = "^2.2.0"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
spacy = {extras = ["en_core_web_sm"], version = "^3.8.2"}
web3 = "^7.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
