[tool.poetry]
name = "NLP-SmartContract-Assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = ">=3.0.3"
flask-socketio = ">=5.4.1"
web3 = "*"
requests = "*"
anthropic = "0.35.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
